implemented file upload functionality

--- a/client/src/components/Disk/Disk.css
+++ b/client/src/components/Disk/Disk.css
@@ -1,9 +1,25 @@
 .disk {
     margin-top: 10px;
+    height: calc(100vh - 100px);
 }
 
 .disk__create {
     margin-left: 6px;
+}
+
+.disk__btns {
+    display: flex;
+}
+
+.drop-area {
+    width: 100%;
+    height: calc(100vh - 50px - 100px);
+    margin-top: 20px;
+    border: 2px dashed #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
 }
 
 .popup {
@@ -36,4 +52,15 @@
 .popup__header {
     display: flex;
     justify-content: space-between;
+}
+
+.disk__upload-input {
+    display: none;
+}
+
+.disk__upload-label {
+    border: 2px dashed #000;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left: 6px;
 }
